fixed issue with reload button. Made invisible until game over, then it can be clicked to reload the page.

--- a/rps.css
+++ b/rps.css
@@ -70,8 +70,17 @@ button{
     padding-bottom: 30px;
 }
 
-#playAgain{
+.playAgain{
     font-size: 25px;
     margin-top: 20px;
-    height: 70px;;
+    height: 70px;
+    visibility: hidden;
+}
+
+#resultdiv{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
